fixed alignment on sidebar

--- a/styles.css
+++ b/styles.css
@@ -46,15 +46,16 @@ li, ul {
 }
 
 .top h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     padding-left: 8px;
 }
 
 .navigation, .extras {
     display: grid;
-    grid-template-columns: 32px 1fr;
-    grid-template-rows: repeat(6, 1fr);
-    gap : 12px;
+    grid-template-columns: 32px auto;
+    grid-auto-rows: min-content;
+    gap : 16px 28px;
+    padding-left: 12px;
 }
 
 .navigation li, .extras li{
@@ -63,3 +64,4 @@ li, ul {
     font-weight: 600;
     align-items: center;
 }
+
